--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,21 @@
 <body>
 <h1>Welcome to Index PAGE!</h1>
 
+<!--<sec:authorize access="isAuthenticated()">-->
+<!--    <% response.sendRedirect("/admin"); %>-->
+<!--</sec:authorize>-->
+<div>
+    <form >
+        <h2>Вход в систему</h2>
+        <div>
+            <input name="username" type="text" placeholder="Username"
+                   autofocus="true"/>
+            <input name="password" type="password" placeholder="Password"/>
+            <button type="submit">Log In</button>
+        </div>
+    </form>
+    </form>
+</div>
 
 </body>
 </html>
