--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Spring Security Example</title>
 </head>
 <body>
 <h1>User, welcome spring boot security page!</h1>
-
-
+<br/>
+<br/>
+<h3>Your data</h3>
+<br/>
+<td th:utext="${user.toString()}">data</td>
+<br>
+<br>
+<br>
+<br>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="logout">
+</form>
 </body>
 </html>
