--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -7,9 +5,10 @@
     <title>Show</title>
 </head>
 <body>
-<p th:text="${user.getName() + ', ' + user.getAge()}">VALUE</p>
+<p th:text="${user.getUsername() + ', ' + user.getAge()}">VALUE</p>
 <p th:text="${'Email: ' + user.getEmail()}">VALUE</p>
 <p th:text="${user.getId()}">VALUE</p>
+<p th:text="${user.getRoles()}">VALUE</p>
 
 <a th:href="@{/users/{id}/edit(id=${user.getId()})}">Edit</a>
 
